vlib/v/checker/tests/mismatched_ptr_op_ptr.vv
fn main() {
	a := '1'
	unsafe {
		b := &a
		println(b + *b)
		println(b + b)
	}
}
